# AI-Coach-Python

./: .env.example  .gitignore  README.md  main.py  memory.json  prompt.txt  pyproject.toml  requirements.txt  test.py
app/: README.md  config.py  logger.py  main.py  tools.py
app/agent/: agent_chat.py  agent_init.py  agent_llms.py  agent_memory.py  agent_tools.py
app/api/: routes.py  schema.py
app/db/redis/: session.py
frontend/: app.py
